# onvp-backend

./: .env.template  .gitignore  Cargo.toml  README.md  diesel.toml  diesel_test.toml
migrations/2024-08-30-165537_create_member_address_details/: up.sql
migrations/2024-08-30-171415_create_member_details/: up.sql
migrations/2024-08-30-172103_create_members/: up.sql
migrations/2024-08-30-174453_create_pages/: up.sql
migrations/2024-08-30-175109_page_access_policies/: down.sql
migrations/postgres/2024-08-30-165223_create_musical_instruments/: down.sql  up.sql
migrations/postgres/2024-08-30-165537_create_member_address_details/: down.sql  up.sql
migrations/postgres/2024-08-30-172103_create_members/: up.sql
migrations/postgres/2024-08-30-173500_create_member_role_associations/: up.sql
migrations/postgres/2024-08-30-173859_create_workgroups/: down.sql  up.sql
migrations/postgres/2024-08-30-174320_create_workgroup_role_associations/: down.sql
migrations/postgres/2024-08-30-175109_page_access_policies/: up.sql
migrations/postgres/2024-10-15-180028_add_members_description_column/: down.sql
migrations/postgres/2024-11-02-121639_add_page_title_column/: down.sql
migrations/postgres/2024-11-02-160701_create_images/: up.sql
migrations/postgres/2024-11-02-160709_create_image_access_policies/: down.sql
migrations/postgres/2024-12-13-180404_create_mail_templates/: down.sql  up.sql
migrations/postgres/2025-01-04-173149_add_page_order/: down.sql  up.sql
migrations/postgres/2025-05-19-190812_add_end_event_date/: down.sql  up.sql
migrations/sqlite/2024-08-30-165223_create_musical_instruments/: up.sql
migrations/sqlite/2024-08-30-165537_create_member_address_details/: up.sql
migrations/sqlite/2024-08-30-171415_create_member_details/: down.sql  up.sql
migrations/sqlite/2024-08-30-172103_create_members/: up.sql
migrations/sqlite/2024-08-30-173500_create_member_role_associations/: down.sql
migrations/sqlite/2024-08-30-173859_create_workgroups/: up.sql
migrations/sqlite/2024-08-30-174105_create_workgroup_member_relationships/: down.sql  up.sql
migrations/sqlite/2024-08-30-174320_create_workgroup_role_associations/: up.sql
migrations/sqlite/2024-08-30-174453_create_pages/: up.sql
migrations/sqlite/2024-10-15-180028_add_members_description_column/: up.sql
migrations/sqlite/2024-11-02-121639_add_page_title_column/: up.sql
migrations/sqlite/2024-11-02-160701_create_images/: down.sql
migrations/sqlite/2024-11-02-160709_create_image_access_policies/: up.sql
migrations/sqlite/2024-11-11-200307_create_properties/: down.sql  up.sql
src/: assets.rs  imaging.rs  injection.rs  lib.rs  main.rs  model.rs  result.rs  schema.rs  schema_build.rs  schema_test.rs  security.rs
src/api/: authorization.rs  config.rs  facebook.rs  members.rs  mod.rs  roles.rs  server.rs  setup.rs  workgroups.rs
src/api/endpoints/: authorization.rs  members.rs  mod.rs  pages.rs  setup.rs  source_code.rs  workgroups.rs
src/api/middleware/: mod.rs
src/backend/: main.rs
src/cli/backend/: main.rs
src/cli/jobs/: activation_cleaner.rs
src/cli/mock/: add_mock_data.rs
src/cli/security/: generate_jwt_keys.rs  generate_otp_key.rs
src/commands/: mod.rs
src/commands/jobs/: mod.rs
src/dal/: members.rs  mod.rs  workgroups.rs
src/dal/members/: internal.rs  mod.rs
src/dal/mock/: members.rs  mod.rs
src/generic/: activation.rs  assets.rs  http.rs  lazy.rs  mod.rs  result.rs  search_helpers.rs  security.rs
src/generic/storage/: database.rs  mod.rs  session.rs
src/jobs/: activation_cleaner.rs
src/mock/: members.rs  mod.rs
src/model/: command_traits.rs  commands.rs  generic.rs  members.rs  mod.rs  primitives.rs  relationships.rs  security.rs  setup.rs  traits.rs  workgroups.rs
src/model/database/: entities.rs  mod.rs  relationships.rs
src/model/entities/: data.rs  logical.rs  mod.rs
src/model/interface/: client.rs  commands.rs  mod.rs  requests.rs  responses.rs  search.rs  sub_commands.rs
src/model/storage/: entities.rs  extended_entities.rs  mod.rs  relationships.rs  roles.rs
src/repositories/: definitions.rs  mod.rs  traits.rs
src/repositories/implementation/: authorization.rs  facebook.rs  image.rs  mail_template.rs  member.rs  member_picture.rs  member_role.rs  mod.rs  musical_instrument.rs  page.rs  properties.rs  search_expressions.rs  workgroup.rs  (+1 more)
src/services/: mod.rs
tests/: users_test.rs
tests/common/: mod.rs
(+52 files in other folders)
