[package]
name = "onvp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
actix-web = { version = "4.9.0", features = ["rustls", "compress-gzip"] }
actix-jwt-auth-middleware = { version = "0.5.0" }
aes-gcm = { version = "0.10.3" }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
env_logger = { version = "0.11.5" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
dotenv = { version = "0.15.0" }
rand = "0.8.5"
log = "0.4.22"
base64 = "0.22.1"
totp-rs = { version = "5.6.0", features = ["gen_secret", "otpauth", "qr"] }
r2d2 = { version = "0.8.10" }
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = { version = "2.1.1" }
actix-state-guards = "0.1.0"
image = "0.25.2"
lettre = { version = "0.11.9", features = ["rustls-tls"] }

[dev-dependencies]
diesel_migrations = { version = "2.2.0", features = ["sqlite", "postgres"] }

[[bin]]
name = "onvp-backend"
path = "src/cli/backend/main.rs"

[[bin]]
name = "onvp-activation-cleaner"
path = "src/cli/jobs/activation_cleaner.rs"

[[bin]]
name = "onvp-otp-keygen"
path = "src/cli/security/generate_otp_key.rs"

[[bin]]
name = "onvp-jwt-keygen"
path = "src/cli/security/generate_jwt_keys.rs"
