[package]
name = "onvp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.5", features = ["postgres", "r2d2", "chrono"] }
actix-web = { version = "4.9.0", features = ["rustls", "compress-gzip"] }
actix-jwt-auth-middleware = { version = "0.5.0" }
aes-gcm = { version = "0.10.3" }
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
env_logger = { version = "0.11.5" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
dotenv = { version = "0.15.0" }
rand = "0.8.5"
log = "0.4.22"
base64 = "0.22.1"
totp-rs = { version = "5.6.0", features = ["gen_secret", "otpauth", "qr"] }
r2d2 = { version = "0.8.10" }
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = { version = "2.1.1" }
image = "0.25.5"
lettre = { version = "0.11.10", features = ["rustls-tls"] }
futures-util = "0.3.31"
clap = { version = "4.5.34", features = ["derive"] }
moka = { version = "0.12.8", features = ["sync"] }
globset = "0.4.15"
handlebars = "6.2.0"

[dev-dependencies]
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

[[bin]]
name = "onvp-backend"
path = "src/cli/backend/main.rs"

[[bin]]
name = "onvp-activation-cleaner"
path = "src/cli/jobs/activation_cleaner.rs"

[[bin]]
name = "onvp-otp-keygen"
path = "src/cli/security/generate_otp_key.rs"

[[bin]]
name = "onvp-jwt-keygen"
path = "src/cli/security/generate_jwt_keys.rs"
